# Smart-Salary-Engine

./: .env.sample  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: adjustment_api.py  attendance_compare_api.py  auth_api.py  calculation_api.py  check_api.py  employee_api.py  employee_v4_api.py  explain_api.py  export_api.py  import_api.py  reference_api.py  salary_run_api.py  snapshot_api.py  v2_api.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: database.py  migrate_add_task_controls.py  migrate_v2.py  migrate_v4.py  migrate_v5.py  seed.py
backend/app/engines/calculator/: calculator.py  safe_expr.py
backend/app/engines/checker/: checker.py
backend/app/engines/explainer/: explainer.py
backend/app/engines/exporter/: exporter.py
backend/app/engines/importer/: importer.py
backend/app/engines/mapper/: mapper.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: adjustment_service.py  attendance_compare_service.py  attendance_service.py  auth_service.py  check_service.py  draft_service.py  employee_service.py  excel_repair_service.py  import_service.py  leave_service.py  performance_service.py  pool_service.py  reference_service.py  run_service.py  snapshot_service.py
backend/tests/: test_api.py  test_checker.py  test_employee.py  test_safe_expr.py
config/: check_rules.yaml  export_templates.yaml  fields.yaml  formula_rules.yaml  sheet_rules.yaml
docs/: 00-Change-Log.md  03-PRD.md  (+11 more)
(+40 files in other folders)
